--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <center><div class = "category_index">
-  <div class ="new_post_header">
+  <div class ="post_header">
     <p><b>Categories List</b></p>
   </div>
   <% @categories.each_with_index do |category, n| %>
