--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
 <center><div class = "category_index">
-  <div class ="new_post_header">
+  <div class ="post_header">
     <p><b>New Category</b></p>
   </div>
   <%= form_for @category do |f| %>
