--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,44 +1,58 @@
-<center><h3 id ="h3_for_post_heading"> This Post is wrote by - <%= @post.user.name %> </h3></center>
+<center><h3 id ="h3_for_post_heading"> This Post is wrote by - <%= link_to @post.user.name, user_path(@post.user.id) %> </h3></center>
 <div class = "post_view_container">
   <div class="latest_post">
     <h3><%= link_to @post.title, post_path(@post) %></h3>
     <span> By - <%= link_to @post.user.name, user_path(@post.user.id) %> <span><%= time_ago_in_words(@post.created_at) %> ago</span></span>
     <div class = "post_comment_count"> Comment :<%= @post.comments.count %></div>
     <hr>
-    <%= @post.content %>
+    <div class = "post_content">  
+      <%= @post.content.html_safe %>
+    </div>
+    <div class ="post_rating_container">
+      <span><i>Rating</i></span> <%= rating_for @post, "title" %>
+    </div>
   </div>
 
-  <div class ="post_comment_container">
-    <div class = "post_header">
-      <p><b>Rating</b><p>
-    </div>
-    <center><%= rating_for @post, "title" %></center>
+  <div class = "post_comment_container">
     <div class = "post_header">
       <p><b>Comment</b><p>
     </div>
     <div class = "comments">
       <%= form_for @comment do |f| %>
-        <div>
-          <%= f.text_field :content, :size => 20, placeholder: "comment" %>
+        <center><div>
+          <%= f.text_area :content, size: "37x4", placeholder: "comment" %>
           <%= f.hidden_field :post_id,  :value => @post.id %>
           <%= f.hidden_field :user_id, :value => current_user.id%>
         </div>
         <div>
           <%= f.submit %>
-        </div>
+        </div></center>
       <% end %>
       <% @comments.each do |comment| %>
         <%= link_to User.find(comment.user_id).name, User.find(comment.user_id) %> <span id="comment_span"><%= time_ago_in_words(comment.created_at) %> ago</span><br>
-        <%= comment.content %><br>
+        <div class = "div_with_comment_content"><%= comment.content[0, 300] %>.....</div>
         <% if can? :manage, comment %>
-          <span id = "comment_span"><%= link_to "destroy", comment_path(comment), :method => :delete %></span>
-          <span id ="comment_span"> <button class = "active_button_class" id = "comment<%= comment.id %>" value = "<%= comment.id %>" table = "<%= comment.class %>" ><%=check_activation_status(comment.id, comment.class) %></button></span>
+          <span id = "comment_span_button"><%= link_to "destroy", comment_path(comment), data: { confirm: "Are you sure?" }, :method => :delete %></span>
+          <span id = "comment_span_button"> <button class = "active_button_class" id = "comment<%= comment.id %>" value = "<%= comment.id %>" table = "<%= comment.class %>" ><%=check_activation_status(comment.id, comment.class) %></button></span>
         <% end %><hr>
+      <% end %>
+      <% if @post.comments.count > 0 %>
+        <div class = "view_all_comment_link"><%= link_to "view all comments >>", comment_path(@post) %></div>
       <% end %>
     </div>
   </div>
 </div>
 
-<div class = "post_second-container">
+<% if can? :manage, @post %>
+  <div class = "admin_action_for_post_in_post_show">
+    <div class = "post_header">
+      <center>Admin action</center>
+    </div>
+    <%= button_to "destroy", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
+    <button class = "active_button_class" id = "post<%= @post.id %>" value = "<%= @post.id %>" table = "<%= @post.class %>" ><%=check_activation_status(@post.id, @post.class) %></button>
+  </div>
+<% end %>
+
+<div class = "post_show_container_for_image">
  <%= image_tag "new2.jpg" %>
 </div>
