--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,11 @@
 <div class = "post_view_container">
   <div class="latest_post">
     <h3><%= link_to @post.title, post_path(@post) %></h3>
+    <div class = "post_edit_link">
+      <% if @post.user.id == current_user.id %>
+        <%= link_to "Edit Post", edit_post_path(@post) %>
+      <% end %>
+    </div>
     <span> By - <%= link_to @post.user.name, user_path(@post.user.id) %> <span><%= time_ago_in_words(@post.created_at) %> ago</span></span>
     <div class = "post_comment_count"> Comment :<%= @post.comments.count %></div>
     <hr>
