--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<center><div class = "new_post_form">
+<div class = "new_post_form">
   <div class = "post_header">
     <p><b>Hello <u><%= current_user.name %></u> What's on your mind<b></p>
   </div>
@@ -37,4 +37,4 @@
       <%= f.submit %>
     </div>
   <% end %>
-</div></center>
+</div>
