--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,9 +22,11 @@
         <th>Manage Account</th>
         <td>
           <button id = "active_button" value = "<%= @user.id %>" table = "<%= @user.class %>" ><%= check_activation_status(@user.id, @user.class) %></button>
-          <%= button_to "Destroy", user_path(@user), method: :delete, data: { confirm: "Are you sure?" } %>
         </td>
       </tr>
     <% end %>
   </table>
+  <% if @user.is_active == 0 %>
+    <p> This user is deactivated </p>
+  <% end %> 
 </div></center>
