Resolved css conflict

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -5,6 +5,9 @@
 .category_index {
   min-height:400px;
   width:500px;
+  margin-left:450px;
+  z-index:-1;
+  position:absolute;
   border: solid 2px #C0C0C0;
 }
 
