--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -5,6 +5,22 @@
 .comment_show_action {
   width:550px;
   background-color:white;
-  margin-left:150px;
   padding:10px;
+}
+
+.deactivate_comment_show {
+  width:600px;
+  margin-left:300px;
+}
+
+.all_comment_of_post_div_container {
+  width:600px;
+  margin-left:200px;
+}
+
+.index_paginate {
+  float:right;
+  margin-right:363px;
+  margin-top:446px;
+  position:realtive;
 }
