--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,40 +1,1 @@
-<div class = "new_post_form">
-  <div class = "post_header">
-    <p><b>Hello <u><%= current_user.name %></u> What's on your mind<b></p>
-  </div>
-  <%= form_for @post do |f| %>
-    <% if @post.errors.any? %>
-      <div class="error_explanation">
-          <span><b>Errors</b></span>
-          <ul>
-          <% @post.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-    <div>
-      <%= f.label :title %> :
-      <%= f.text_field :title, :placeholder => "Give a Title to your thought", :size => 25 %>
-    </div><br>
-    <span id ="ckeditor_span">Show Editor</span>
-    <div id = "ckeditor" style = "display:none" >
-      <%= f.label :content %>:
-      <%= f.cktext_area :content,:placeholder => "Write your thought", :class => "ckeditor_text_area" ,size: "20x30" %>
-    </div>
-    <div id = "normal_field">
-      <%= f.label :content %>:
-      <%= f.text_area :content,:placeholder => "Write your thought", size: "25x8", disabled: false, :class => "normal_text_area"%>
-    </div>
-    <div>
-      <%= f.hidden_field :user_id, :value => current_user.id %>
-    </div>
-    <div>
-      <%= f.label :category_id %><br>
-      <%= f.collection_select(:category_id, Category.all.where(is_active: 1), :id, :name) %>
-    </div><br>
-    <div>
-      <%= f.submit %>
-    </div>
-  <% end %>
-</div>
+<%= render "form" %>
