--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,4 +1,4 @@
-<div class ="search_view">
+<div class ="search_view div_absolute_position">
   <% if (@school[0].empty? && @school[1].empty? && @school[2].empty?) %>
     <h3> No record found for "<%= params[:search] %>" </h3>
   <% else %>
