--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -19,12 +19,12 @@ tr:nth-child(odd):hover {
   height:300px;
   width:400px;
   margin-left:460px;
-  z-index:-1;
-  position:absolute;
 }
 
 .search_view {
   width:400px;
+  position:absolute;
+  z-index:-1;
 }
 
 .form_field {
@@ -37,19 +37,14 @@ tr:nth-child(odd):hover {
    width:172px;
 }
 
-.form_text_field {
-   float:right;
-}
-
-input:focus {
-  background-color:#D0DFFA;
-}
-
 .new_user_form {
-  width:500px;
-  background-color:#E0EAFB;
-  margin-left:200px;
+  min-width:450px;
+  min-height:435px;
+  background-color:#D0DCEB;
+  margin-left:100px;
   float:left;
+  border: groove 1px #C0C0C0;
+  padding-left:20px;
 }
 
 .submit_button {
@@ -58,10 +53,7 @@ input:focus {
   height:30px;
 }
 
-.submit_button:hover {
-  background-color:#5077BE;
-}
-
 #new_user_form_note {
   color:#A52A2A;
 }
+
