--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,37 +1,45 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class = "new_user_form div_absolute_position">
+  <h2 id = "h3_for_post_heading" >Edit <%= resource_name.to_s.humanize %></h2>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true %></div>
+    <div class ="devise_errors">
+      <%= devise_error_messages! %>
+    </div>
+    
+    <div class = "form_field">
+      <div class = "form_label"><%= f.label :name %></div>
+      <div><%= f.text_field :name, autofocus: true, class: "form-control" %></div>
+    </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+    <div class = "form_field">
+      <div class = "form_label"><%= f.label :email %></div>
+      <div><%= f.email_field :email, autofocus: true,  class: "form-control" %></div>
+    </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class = "form_field">
+      <div class = "form_label"><%= f.label :password %></div>
+      <div><%= f.password_field :password, autocomplete: "off",  class: "form-control" %></div>
+    </div>
+
+    <div class = "form_field">
+      <div class = "form_label"><%= f.label :password_confirmation %></div>
+      <div><%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
+    </div>
+
+    <div class = "form_field">
+      <div class = "form_label"><%= f.label :city %></div>
+      <div><%= f.text_field :city, autofocus: true, class: "form-control" %></div>
+    </div>
+
+    <div class = "form_field">
+      <div class = "form_label"><%= f.label :phone_no %></div>
+      <div><%= f.text_field :phone_no, autofocus: true, class: "form-control" %></div>
+    </div>
+
+    <div><%= f.submit class: 'btn btn-primary'%> </div>
   <% end %>
+  <h3 id ="h3_for_post_heading">Cancel my account</h3>
+  <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
+  <%= link_to "Back", :back %>
+</div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password, autocomplete: "off" %></div>
-
-  <div><%= f.label :city %><br />
-  <%= f.text_field :city, autofocus: true %></div>
-
-  <div><%= f.label :phone_no %><br />
-  <%= f.text_field :phone_no, autofocus: true %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
