--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <center><h2 id= "new_user_form_note"> Welcome In The World Of Blog </h2></center>
-<div class = "new_user_form">
-  <h4>Hello New User</h4>
+<div class = "new_user_form div_absolute_position">
+  <h3 id = "h3_for_post_heading">Hello New User</h3>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <div class ="devise_errors">
       <%= devise_error_messages! %>
@@ -8,39 +8,36 @@
     
     <div class = "form_field">
       <div class = "form_label"><%= f.label :name %></div>
-      <div class = "form_text_field"><b>:</b> <%= f.text_field :name, autofocus: true %></div>
+      <div><%= f.text_field :name, autofocus: true, class: "form-control" %></div>
     </div>
 
     <div class = "form_field">
       <div class = "form_label"><%= f.label :email %></div>
-      <div class = "form_text_field"><b>:</b> <%= f.email_field :email, autofocus: true %></div>
+      <div><%= f.email_field :email, autofocus: true,  class: "form-control" %></div>
     </div>
 
     <div class = "form_field">
       <div class = "form_label"><%= f.label :password %></div>
-      <div class = "form_text_field"><b>:</b> <%= f.password_field :password, autocomplete: "off" %></div>
+      <div><%= f.password_field :password, autocomplete: "off",  class: "form-control" %></div>
     </div>
 
     <div class = "form_field">
       <div class = "form_label"><%= f.label :password_confirmation %></div>
-      <div class = "form_text_field"><b>:</b> <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+      <div><%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
     </div>
 
     <div class = "form_field">
       <div class = "form_label"><%= f.label :city %></div>
-      <div class = "form_text_field"><b>:</b> <%= f.text_field :city, autofocus: true %></div>
+      <div><%= f.text_field :city, autofocus: true, class: "form-control" %></div>
     </div>
 
     <div class = "form_field">
       <div class = "form_label"><%= f.label :phone_no %></div>
-      <div class = "form_text_field"><b>:</b> <%= f.text_field :phone_no, autofocus: true %></div>
+      <div><%= f.text_field :phone_no, autofocus: true, class: "form-control" %></div>
     </div>
-
-    <center><div><%= f.submit "Sign up", class: "submit_button" %></div></center>
+    <center><div><%= f.submit class: 'btn btn-primary'%> </div></center>
   <% end %>
-
 </div>
-
-<div class = "post_show_container_for_image">
+<div class = "sign_up_page_image_container">
  <%= image_tag "new2.jpg" %>
 </div>
