--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<div class = "post_view_container">
+<div class = "post_view_container div_absolute_position">
   <% if !@posts.empty? %>
-    <h3 id ="h3_for_post_heading">Latest Post</h3>
+    <h3 id ="colored_heading">Latest Post</h3>
   <% end %>
   <%= render "posts_list" %>
 </div>
